# FlowCloze

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README  README.en.md  README.md  RELEASE.md
editors/vscode-flowcloze-syntax/: package.json
editors/vscode-flowcloze-syntax/syntaxes/: flowcloze.tmLanguage.json
notes/: sample.md
sample/: sample.csv  sample.gemini.json  sample.json  sample.md
src/: ankilot.rs  csv.rs  gemini.rs  json.rs  lib.rs  main.rs  models.rs  parser.rs  pdf.rs  prompt.rs  validation.rs  view.rs  yaml.rs
templates/: cloze.typ
tests/: ankilot.rs  gemini.rs  json.rs  parser.rs  prompt.rs  validation.rs  yaml.rs
tests/fixtures/: duplicate-id.md  fenced-example.md  generated-blank-mismatch.json  generated-blank-mismatch.yaml  generated-unknown-answer.json  generated-unknown-answer.yaml  generated-valid.json  generated-valid.yaml  missing-id.md  mvp-context.md  mvp.md  unclosed.md  unknown-type.md
