[package]
name = "flowcloze"
version = "0.1.0"
edition = "2021"
description = "Markdown qblock parser for context cloze question generation."

[dependencies]
crossterm = "0.27"
dotenvy = "0.15"
ratatui = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
